--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     android:layout_gravity="center"
     tools:context=".SignUpLogin"
+    android:gravity="center"
     android:background="@color/background_color">
 
     <TextView
