Login layout edit

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,6 +8,8 @@
     android:layout_gravity="center"
     tools:context=".SignUpLogin"
     android:gravity="center"
+    android:paddingLeft="50dp"
+    android:paddingRight="50dp"
     android:background="@color/background_color">
 
     <TextView
