--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,7 +38,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="@string/submit" />
+        android:text="@string/submit"
+        android:onClick="submit"/>
 
     <View
         android:layout_width="fill_parent"
@@ -57,6 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sign_up"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:onClick="signUp"/>
 
 </LinearLayout>
