--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/background_color"
+    android:gravity="center"
+    android:paddingLeft="30dp"
+    android:paddingRight="30dp"
     tools:context=".Main">
 
     <org.osmdroid.views.MapView
