--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/background_color"
     android:gravity="center"
-    android:paddingLeft="50dp"
-    android:paddingRight="50dp">
+    android:paddingLeft="30dp"
+    android:paddingRight="30dp">
+
+    <org.osmdroid.views.MapView
+        android:id="@+id/mapview2"
+        android:layout_width="fill_parent"
+        android:layout_height="280dp"
+        xmlns:android="http://schemas.android.com/apk/res/android" />
 
     <View
-        android:layout_height="200dp"
+        android:layout_height="20dp"
         android:layout_width="fill_parent">
         <!-- This view adds space between the elements !-->
     </View>
