--- a/app/src/main/res/layout/activity_running.xml
+++ b/app/src/main/res/layout/activity_running.xml
@@ -39,10 +39,11 @@
         android:text="@string/kilometers"
         android:textStyle="bold"/>
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30dp" />
+        android:textSize="30dp"
+        android:id="@+id/kilometers"/>
 
     <View
         android:layout_width="match_parent"
