--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,6 +32,7 @@
         android:hint="@string/username"
         android:textSize="16dp"
         android:textColorHint="@color/white_greyish"
+        android:textColor="@color/white_greyish"
         android:id="@+id/login"/>
 
     <Button
