--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -34,7 +34,14 @@
         android:hint="@string/username"
         android:textSize="16dp"
         android:textColorHint="@color/white_greyish"
+        android:textColor="@color/white_greyish"
         android:id="@+id/submitLogin"/>
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="20dp">
+        <!-- This view adds space between the elements !-->
+    </View>
 
     <Button
         android:layout_width="match_parent"
